--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -92,4 +92,7 @@ iframe{
     align-items: center; /* İkon ve metni yan yana hizalar */
   }
 }
-
+.carousel-item {
+  pointer-events: auto; 
+  /* Diğer stiller */
+}
